api-gateway/templates/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: example-app-gateway-ref
  namespace: consul
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: example-app
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: api-gateway
