api-gateway/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: consul
spec:
  type: LoadBalancer
  selector:
    component: api-gateway
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
