api-gateway/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1  
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
spec:
  gatewayClassName: consul
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.cluster.local"
    allowedRoutes:
      namespaces:
        from: All
